@@ -3,22 +3,6 @@
  > GetLastError(): error code */
 modexp _Noreturn void OS_error (void);
 modexp _Noreturn void OS_error_arg (object etype, object arg);
-local char * format_message (DWORD errcode) {
-  char* ret;
-  begin_system_call();
-  var int status = FormatMessage(FORMAT_MESSAGE_ALLOCATE_BUFFER |
-                                 FORMAT_MESSAGE_FROM_SYSTEM |
-                                 FORMAT_MESSAGE_IGNORE_INSERTS,
-                                 NULL, errcode, 0, (LPTSTR)&ret, 0, NULL);
-  end_system_call();
-  if (status == 0)
-    return NULL;
-  /* strip terminating spaces, newlines and periods to conform to strerror */
-  while (cint_white_p(ret[status-1]) || ret[status-1] == '.')
-    status--;
-  ret[status] = 0;
-  return ret;
-}
 local void OS_error_internal (DWORD errcode) {
   /* print start message: */
   write_errorstring(GETTEXT("Win32 error "));
@@ -40,16 +24,6 @@ local void OS_error_internal (DWORD errcode) {
     LocalFree(msg);
     end_system_call();
   }
-}
-LISPFUNNF(format_message,1) {
-  DWORD error_code = I_to_uint32(check_uint32(popSTACK()));
-  char *msg = format_message(error_code);
-  if (msg) {
-    VALUES1(asciz_to_string(msg,O(misc_encoding)));
-    begin_system_call();
-    LocalFree(msg);
-    end_system_call();
-  } VALUES1(NIL);
 }
 modexp _Noreturn void OS_error (void) {
   var DWORD errcode;
